# fits-io

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
examples/: open_file.rs
src/: error.rs  fits.rs  fits_slice.rs  lib.rs  slice_ascii_table_hdu.rs  slice_bin_table_hdu.rs  slice_image_hdu.rs
src/bin_table/: bin_table.rs  from_bin_table.rs  from_bin_table_row.rs  mod.rs  row.rs  to_bin_table.rs  value.rs
src/fs/: file_progress.rs  fs_ascii_table_hdu.rs  fs_bin_table_hdu.rs  fs_fits.rs  fs_image_hdu.rs  is_fits_file.rs  mod.rs  open_fits_file.rs
src/hdu/: ascii_table_hdu.rs  bin_table_hdu.rs  extension_hdu.rs  hdu.rs  image_hdu.rs  mod.rs
src/header/: bayer_pattern.rs  bitpix.rs  card.rs  card_keys.rs  extension_type.rs  header.rs  image_type.rs  mod.rs  table_column_format.rs  value.rs
src/image/: image.rs  image_data.rs  mod.rs
src/util/: mod.rs  read_bytes.rs  read_bytes_async.rs  read_seek.rs
tests/: Light_19 Aurigae_600.0s_Bin1_ISO800_20251117-190134_6.0C_0001.fit  gaia-dr3-mag-gt-12.fits  open_bin_table.rs  stream_image.rs
