[package]
name = "fits-io"
edition = "2024"
version = "0.1.2"
description = "A pure-Rust FITS file handling library inspired by CFITSIO, focused on safety, clarity, and performance."
keywords = ["fits", "cfitsio", "no_std", "healpix"]
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
image = { version = "0.25.6", optional = true, default-features = false }
futures = { version = "0.3.31", optional = true }
tokio = { version = "1.48.0", features = ["io-util", "sync", "rt"], optional = true }
tokio-stream = { version = "0.1.18", optional = true }
flate2 = { version = "1.0", optional = true }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true }
chrono = "0.4.42"
latlong = "0.1"
thiserror = { version = "2.0", default-features = false }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
simplelog = "0.12.2"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
rustversion = "1.0"

[features]
default = ["gzip", "tokio", "image", "fs", "rayon"]
gzip = ["dep:flate2", "fs", "std"]
tokio = ["dep:tokio", "dep:futures", "dep:tokio-stream", "std"]
image = ["dep:image", "std"]
fs = ["std"]
serde = ["dep:serde", "std"]
std = ["thiserror/std"]
rayon = ["dep:rayon"]

[[test]]
name = "open_bin_table"
required-features = ["serde"]
